refactor(all files): better structure, esp. js in /dist

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "version": "2.0.0",
   "permissions": ["storage", "alarms"],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "dist/background.js"
   },
   "action": {
     "default_popup": "popup.html",
